imp - Show file handle when issuing NLOC0003
---

When issuing NLOC0003 warnings on standalone language analyzer (check),
try to show the file contents.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
+++ b/private/Nitrocid.LocaleChecker/Nitrocid.LocaleChecker.csproj
@@ -57,4 +57,6 @@
     <ProjectReference Include="..\..\public\Nitrocid.Analyzers\Nitrocid.Analyzers\Nitrocid.Analyzers.csproj" />
   </ItemGroup>
 
+  <Import Project="..\..\public\Nitrocid.Analyzers\Nitrocid.Analyzers.Common\Nitrocid.Analyzers.Common.projitems" Label="Shared" />
+
 </Project>
