imp - bkp - "Supressed?" Huh?
---

We've corrected the spelling of "suppressed" in the description of DND.

  - Backportable for 0.1.1
  - Backportable for 0.1.0

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: True
Part: 1/1

--- a/public/Nitrocid/Resources/Settings/SettingsEntries.json
+++ b/public/Nitrocid/Resources/Settings/SettingsEntries.json
@@ -1182,7 +1182,7 @@
                 "Name": "Do Not Disturb",
                 "Type": "SBoolean",
                 "Variable": "DoNotDisturb",
-                "Description": "If Do Not Disturb is enabled, all notifications received will be supressed from the display. This means that you won't be able to see any notification to help you focus."
+                "Description": "If Do Not Disturb is enabled, all notifications received will be suppressed from the display. This means that you won't be able to see any notification to help you focus."
             },
             {
                 "Name": "Text editor settings",
