imp - bkp - Improved handling of CL and Translatio...
...ns

---

Now, we'll no longer have to show eng.txt and its metadata information
three times.

  - Backportable for 0.1.1
  - Backportable for 0.1.0

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: True
Part: 1/1

--- a/public/Nitrocid.Locales/Nitrocid.Locales.csproj
+++ b/public/Nitrocid.Locales/Nitrocid.Locales.csproj
@@ -31,24 +31,6 @@
   </ItemGroup>
   <!-- Locales Dependencies Information End -->
 
-  <!-- Locales Language Metadata and Base -->
-  <ItemGroup>
-    <None Include="CustomLanguages\Metadata.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Translations\Metadata.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Translations\eng.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="CustomLanguages\eng.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AddonTranslations\eng.txt" />
-  </ItemGroup>
-  <!-- Locales Language Metadata and Base End -->
-
   <!-- Locales Translations -->
   <ItemGroup>
     <None Include="AddonTranslations\Metadata.json">
@@ -59,9 +41,11 @@
     </None>
   </ItemGroup>
 
-  <Target Name="UpdateEng" BeforeTargets="Compile">
-    <Copy SourceFiles="Translations\eng.txt" DestinationFolder="AddonTranslations" />
-    <Copy SourceFiles="Translations\eng.txt" DestinationFolder="CustomLanguages" />
+  <Target Name="UpdateEng" AfterTargets="Compile">
+    <Copy SourceFiles="AddonTranslations\eng.txt" DestinationFolder="$(OutputPath)\Translations" />
+    <Copy SourceFiles="AddonTranslations\eng.txt" DestinationFolder="$(OutputPath)\CustomLanguages" />
+    <Copy SourceFiles="AddonTranslations\MetadataEng.json" DestinationFiles="$(OutputPath)\Translations\Metadata.json" />
+    <Copy SourceFiles="AddonTranslations\MetadataEng.json" DestinationFiles="$(OutputPath)\CustomLanguages\Metadata.json" />
   </Target>
   <!-- Locales Translations End -->
 
