upd - Updated libraries
---

Type: upd
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,7 @@ jobs:
             tools/*.exe
       - name: Notify build
         uses: tsickert/discord-webhook@v6.0.0
+        continue-on-error: true
         with:
           webhook-url: ${{ secrets.WEBHOOK_URL }}
           content: "<:nitrocidks:1268905174563557452> ${{ steps.release-asset.outputs.SUBJECT }} <:nitrocidks:1268905174563557452>\n\n${{ steps.release-asset.outputs.BODY }}"
