--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,10 @@ jobs:
         run: dotnet tool install --global docfx
       - name: Release Asset Preparation
         run: |
-          cd tools ; cmd.exe /c "build.cmd Release -p:ContinuousIntegrationBuild=true" ; cd ..
-          cd tools ; cmd.exe /c "pack.cmd" ; cd ..
-          cd tools ; cmd.exe /c "docgen.cmd" ; cd ..
-          cd tools ; cmd.exe /c "docgen-pack.cmd" ; cd ..
+          cmd.exe /c "tools/build.cmd Release -p:ContinuousIntegrationBuild=true"
+          cmd.exe /c "tools/pack.cmd"
+          cmd.exe /c "tools/docgen.cmd"
+          cmd.exe /c "tools/docgen-pack.cmd"
           dotnet build -p:Configuration=Release -p:Platform=x64 public/Nitrocid.Installers/Nitrocid.Installer.sln
           dotnet build -p:Configuration=Release -p:Platform=ARM64 public/Nitrocid.Installers/Nitrocid.Installer.sln
           Move-Item public/Nitrocid.Installers/Nitrocid.InstallerBundle/bin/x64/Release/Nitrocid.InstallerBundle.exe tools/nitrocid-win-x64-installer.exe
@@ -65,6 +65,4 @@ jobs:
           webhook-url: ${{ secrets.WEBHOOK_URL }}
           content: "<:nitrocidks:1268905174563557452> ${{ steps.release-asset.outputs.SUBJECT }} <:nitrocidks:1268905174563557452>\n\n${{ steps.release-asset.outputs.BODY }}"
       - name: Package Publication
-        run: |
-          chmod +x tools/*.sh
-          cd tools ; cmd.exe /C "push.cmd ${{ secrets.NUGET_APIKEY }}" ; cd ..
+        run: cmd.exe /C "tools/push.cmd ${{ secrets.NUGET_APIKEY }}"
