--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Package Publication
         run: |
           dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
-          cmd.exe /C "tools/push.cmd ${{ secrets.GITHUB_TOKEN }} github"
+          cmd.exe /C "tools\push.cmd ${{ secrets.GITHUB_TOKEN }} github"
