int - Fixed errors regarding changes.chg
---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid/Nitrocid.csproj
+++ b/public/Nitrocid/Nitrocid.csproj
@@ -96,7 +96,7 @@
 
   <!-- KS Release Changelogs -->
   <ItemGroup>
-    <EmbeddedResource Include="..\..\tools\changes.chg">
+    <EmbeddedResource Include="..\..\vnd\changes.chg">
       <LogicalName>Nitrocid.Resources.changes.chg</LogicalName>
       <Visible>false</Visible>
     </EmbeddedResource>
