int - Fixed GitHub workflows
---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.github/workflows/build-ppa-package-with-lintian.yml
+++ b/.github/workflows/build-ppa-package-with-lintian.yml
@@ -30,7 +30,7 @@ jobs:
         
       - name: Initialize offline package
         run: |
-          chmod +x tools/initializeoffline.sh
+          chmod +x vnd/initializeoffline.sh
           make init-offline
           make clean
         
