--- a/.github/workflows/build-ppa.yml
+++ b/.github/workflows/build-ppa.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Initialize offline package
         run: |
           sudo ip netns add no-net
-          chmod +x tools/initializeoffline.sh
+          chmod +x vnd/initializeoffline.sh
           make init-offline
           make clean
         
