dcp - Added placeholders for the future release
---

Type: dcp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.github/workflows/build-ppa.yml
+++ b/.github/workflows/build-ppa.yml
@@ -2,9 +2,9 @@ name: Build Project (for Launchpad PPA)
 
 on:
   push:
-    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas" ]
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas", "v0.1.3.x-saas" ]
   pull_request:
-    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas" ]
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas", "v0.1.3.x-saas" ]
 
 
 jobs:
