--- a/.github/workflows/build-ppa-package-with-lintian.yml
+++ b/.github/workflows/build-ppa-package-with-lintian.yml
@@ -2,9 +2,9 @@ name: Build Project (Debian Package, Lintian)
 
 on:
   push:
-    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas" ]
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas", "v0.1.3.x-saas" ]
   pull_request:
-    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas" ]
+    branches: [ "main", "v0.1.0.x-saas", "v0.1.1.x-saas", "v0.1.2.x-saas", "v0.1.3.x-saas" ]
 
 jobs:
   build:
@@ -38,8 +38,8 @@ jobs:
         run: |
           mv debian ..
           mv .github ..
-          tar cfv ../nitrocid-27_3.1.27.48-0.1.2.0.orig.tar .
-          xz ../nitrocid-27_3.1.27.48-0.1.2.0.orig.tar
+          tar cfv ../nitrocid-28_3.1.28.0-0.1.3.0.orig.tar .
+          xz ../nitrocid-28_3.1.28.0-0.1.3.0.orig.tar
           mv ../debian .
 
       - name: Build package
@@ -55,4 +55,4 @@ jobs:
 
       - name: Try to install
         run: |
-          sudo apt install ./nitrocid-27_*.deb
+          sudo apt install ./nitrocid-28_*.deb
